feat: Initial implementation of full-stack PM analyzer

--- a/pm-analyzer-fiori/webapp/i18n/i18n.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n.properties
@@ -1,17 +1,21 @@
-# This is the resource bundle for com.sap.pm.pmanalyzerfiori
+# App metadata
+appTitle=PM Quality Assistant
+appDescription=An application to analyze the quality of Plant Maintenance notifications.
+worklistTitle=Notifications List
 
-#Texts for manifest.json
+# Page and login/logout
+objectPageTitle=Notification Details: {0}
+loginButtonText=Login
+logoutButtonText=Logout
 
-#XTIT: Application name
-appTitle=PM Qualitätsassistent
-
-#YDES: Application description
-appDescription=An SAP Fiori application.
-#XTIT: Main view title
-title=PM Qualitätsassistent
-
-# Worklist View
-worklistTitle=Instandhaltungsmeldungen
-
-# Object View
-objectViewTitle=Meldungsdetails
+# Object View content
+object.descriptionLabel=Description
+object.typeLabel=Notification Type
+object.userLabel=Created By
+object.longTextLabel=Long Text
+object.activitiesLabel=Activities
+object.analyzeButtonText=Analyze Quality
+object.resultsPanelTitle=Analysis Result
+object.scoreLabel=Quality Score
+object.problemsLabel=Identified Problems
+object.summaryLabel=Summary & Recommendations
