feat: Implement new login flow and secure worklist

--- a/pm-analyzer-fiori/webapp/i18n/i18n.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n.properties
@@ -3,10 +3,21 @@ appTitle=PM Quality Assistant
 appDescription=An application to analyze the quality of Plant Maintenance notifications.
 worklistTitle=Notifications List
 
-# Page and login/logout
+# General
+title=PM Quality Assistant
 objectPageTitle=Notification Details: {0}
 loginButtonText=Login
 logoutButtonText=Logout
+noProblemsFound=No specific problems were identified.
+
+# View1 (Main Page)
+view1.inputLabel=PM Notification Text
+view1.inputPlaceholder=Paste the long text and activities of your PM notification here for analysis...
+view1.analyzeButton=Analyze Text
+view1.resultsPanelHeader=Analysis Results
+view1.scoreLabel=Quality Score
+view1.problemsLabel=Identified Problems
+view1.summaryLabel=Summary & Recommendations
 
 # Object View content
 object.descriptionLabel=Description
