New language features

--- a/pm-analyzer-fiori/webapp/i18n/i18n.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n.properties
@@ -1,32 +1,26 @@
-# App metadata
-appTitle=PM Quality Assistant
-appDescription=An application to analyze the quality of Plant Maintenance notifications.
-worklistTitle=Notifications List
+# App Titles
+appTitle=PM Notification Analyzer
+appDescription=An SAP Fiori application to analyze plant maintenance notifications.
 
-# General
-title=PM Quality Assistant
-objectPageTitle=Notification Details: {0}
-loginButtonText=Login
-logoutButtonText=Logout
-noProblemsFound=No specific problems were identified.
+# Login View
+loginWelcomeTitle=Welcome
+loginIntroText=Please log in to continue.
+loginButtonText=Log In
+logoutButtonText=Log Out
 
-# View1 (Main Page)
-view1.inputLabel=PM Notification Text
-view1.inputPlaceholder=Paste the long text and activities of your PM notification here for analysis...
-view1.analyzeButton=Analyze Text
-view1.resultsPanelHeader=Analysis Results
-view1.scoreLabel=Quality Score
-view1.problemsLabel=Identified Problems
-view1.summaryLabel=Summary & Recommendations
+# Worklist View
+worklistTitle=Notifications
 
-# Object View content
+# Object View
+objectPageTitle=Notification: {0}
 object.descriptionLabel=Description
 object.typeLabel=Notification Type
 object.userLabel=Created By
 object.longTextLabel=Long Text
 object.activitiesLabel=Activities
-object.analyzeButtonText=Analyze Quality
+object.analyzeButtonText=Analyze
 object.resultsPanelTitle=Analysis Result
 object.scoreLabel=Quality Score
 object.problemsLabel=Identified Problems
-object.summaryLabel=Summary & Recommendations
+object.summaryLabel=Summary
+noProblemsFound=No problems found.
