--- a/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
@@ -1,17 +1,26 @@
-# App-Metadaten
-appTitle=PM Qualitätsassistent
-appDescription=Eine Anwendung zur Analyse der Qualität von Instandhaltungsmeldungen.
+# App Titles
+appTitle=PM Meldungs-Analysator
+appDescription=Eine SAP Fiori Anwendung zur Analyse von Instandhaltungsmeldungen.
 
-# Seite und Login/Logout
-title=Qualitätsanalyse für PM-Meldungen
+# Login View
+loginWelcomeTitle=Willkommen
+loginIntroText=Bitte melden Sie sich an, um fortzufahren.
 loginButtonText=Anmelden
 logoutButtonText=Abmelden
 
-# View1-Inhalt
-view1.inputLabel=Text der PM-Meldung zur Analyse eingeben
-view1.inputPlaceholder=Fügen Sie hier den Langtext und die Maßnahmen der PM-Meldung ein...
-view1.analyzeButton=Qualität analysieren
-view1.resultsPanelHeader=Analyseergebnisse
-view1.scoreLabel=Qualitäts-Score
-view1.problemsLabel=Identifizierte Probleme
-view1.summaryLabel=Zusammenfassung & Empfehlungen
+# Worklist View
+worklistTitle=Meldungen
+
+# Object View
+objectPageTitle=Meldung: {0}
+object.descriptionLabel=Kurztext
+object.typeLabel=Meldungsart
+object.userLabel=Erfasst von
+object.longTextLabel=Langtext
+object.activitiesLabel=Maßnahmen
+object.analyzeButtonText=Analysieren
+object.resultsPanelTitle=Analyseergebnis
+object.scoreLabel=Qualitäts-Score
+object.problemsLabel=Festgestellte Probleme
+object.summaryLabel=Zusammenfassung
+noProblemsFound=Keine Probleme gefunden.
