feat(frontend): Overhaul frontend with detailed data model
- Replaced the simple mock data with a more realistic, nested data model that includes work order details.
- Updated the worklist view to display more information, including priority and system status.
- Completely redesigned the object detail page to provide a comprehensive overview of a notification and its associated work order.
- Implemented a robust, static timeline visualization for notification and work order statuses.
- Fully internationalized all new UI elements with German translations.
- Corrected numerous layout, styling, and data binding issues to create a polished and professional user experience.

--- a/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
@@ -2,25 +2,56 @@
 appTitle=PM Meldungs-Analysator
 appDescription=Eine SAP Fiori Anwendung zur Analyse von Instandhaltungsmeldungen.
 
-# Login View
-loginWelcomeTitle=Willkommen
-loginIntroText=Bitte melden Sie sich an, um fortzufahren.
-loginButtonText=Anmelden
-logoutButtonText=Abmelden
+# General Labels
+shortTextLabel=Kurztext
+notificationTypeLabel=Meldungsart
+createdByLabel=Erstellt von
+functionalLocationLabel=Technischer Platz
+equipmentLabel=Equipment
+statusLabel=Status
+priorityLabel=Priorität
+
+creationDateLabel=Erfassungsdatum
+longTextLabel=Langtext
+descriptionLabel=Beschreibung
+noDataText=Keine Meldungen gefunden.
 
 # Worklist View
 worklistTitle=Meldungen
+shortTextPlaceholder=Suche im Kurztext...
+notificationTypePlaceholder=Art auswählen...
+createdByPlaceholder=Benutzer auswählen...
+functionalLocationPlaceholder=Platz auswählen...
+equipmentPlaceholder=Equipment auswählen...
+statusPlaceholder=Status auswählen...
 
 # Object View
-objectPageTitle=Meldung: {0}
-object.descriptionLabel=Kurztext
-object.typeLabel=Meldungsart
-object.userLabel=Erfasst von
-object.longTextLabel=Langtext
-object.activitiesLabel=Maßnahmen
-object.analyzeButtonText=Analysieren
-object.resultsPanelTitle=Analyseergebnis
-object.scoreLabel=Qualitäts-Score
-object.problemsLabel=Festgestellte Probleme
-object.summaryLabel=Zusammenfassung
-noProblemsFound=Keine Probleme gefunden.
+objectTitle=Meldung
+notificationDetailsTab=Meldedetails
+codesLabel=Codierungen
+damageLabel=Schaden
+causeLabel=Ursache
+workOrderTab=Auftrag
+orderIdLabel=Auftragsnummer
+orderTypeLabel=Auftragsart
+workCenterLabel=Arbeitsplatz
+plannerGroupLabel=Planergruppe
+basicStartDateLabel=Eckstarttermin
+basicEndDateLabel=Eckendtermin
+requiredStartLabel=Benötigt Start
+requiredEndLabel=Benötigt Ende
+malfunctionStartLabel=Störbeginn
+malfunctionEndLabel=Störende
+operationsHeader=Vorgänge
+operationColumn=Vorgang
+descriptionColumn=Beschreibung
+workCenterColumn=Arbeitsplatz
+durationColumn=Dauer
+
+# Analysis Tab
+qualityAnalysisTab=Qualitätsanalyse
+qualityScoreLabel=Qualitäts-Score
+summaryLabel=Zusammenfassung
+problemsLabel=Festgestellte Probleme
+whatIfAnalysisLabel=Was-wäre-wenn-Analyse
+reanalyzeButtonText=Qualität neu analysieren
