--- a/pm-analyzer-fiori/webapp/i18n/i18n_en.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n_en.properties
@@ -2,25 +2,56 @@
 appTitle=PM Notification Analyzer
 appDescription=An SAP Fiori application to analyze plant maintenance notifications.
 
-# Login View
-loginWelcomeTitle=Welcome
-loginIntroText=Please log in to continue.
-loginButtonText=Log In
-logoutButtonText=Log Out
+# General Labels
+shortTextLabel=Short Text
+notificationTypeLabel=Notification Type
+createdByLabel=Created By
+functionalLocationLabel=Functional Location
+equipmentLabel=Equipment
+statusLabel=Status
+priorityLabel=Priority
+
+creationDateLabel=Creation Date
+longTextLabel=Long Text
+descriptionLabel=Description
+noDataText=No notifications found.
 
 # Worklist View
 worklistTitle=Notifications
+shortTextPlaceholder=Search in short text...
+notificationTypePlaceholder=Select a type...
+createdByPlaceholder=Select a user...
+functionalLocationPlaceholder=Select a location...
+equipmentPlaceholder=Select an equipment...
+statusPlaceholder=Select a status...
 
 # Object View
-objectPageTitle=Notification: {0}
-object.descriptionLabel=Description
-object.typeLabel=Notification Type
-object.userLabel=Created By
-object.longTextLabel=Long Text
-object.activitiesLabel=Activities
-object.analyzeButtonText=Analyze
-object.resultsPanelTitle=Analysis Result
-object.scoreLabel=Quality Score
-object.problemsLabel=Identified Problems
-object.summaryLabel=Summary
-noProblemsFound=No problems found.
+objectTitle=Notification
+notificationDetailsTab=Notification Details
+codesLabel=Codes
+damageLabel=Damage
+causeLabel=Cause
+workOrderTab=Work Order
+orderIdLabel=Order ID
+orderTypeLabel=Order Type
+workCenterLabel=Work Center
+plannerGroupLabel=Planner Group
+basicStartDateLabel=Basic Start Date
+basicEndDateLabel=Basic End Date
+requiredStartLabel=Required Start
+requiredEndLabel=Required End
+malfunctionStartLabel=Malfunction Start
+malfunctionEndLabel=Malfunction End
+operationsHeader=Operations
+operationColumn=Operation
+descriptionColumn=Description
+workCenterColumn=Work Center
+durationColumn=Duration
+
+# Analysis Tab
+qualityAnalysisTab=Quality Analysis
+qualityScoreLabel=Quality Score
+summaryLabel=Summary
+problemsLabel=Identified Problems
+whatIfAnalysisLabel=What-If Analysis
+reanalyzeButtonText=Re-Analyze Quality
