feat(analysis): Enhance analysis with structured data and improved UI
This commit significantly improves the AI analysis capabilities and the user interfaces status visualization.

Backend:
- The `/api/analyze` endpoint now accepts a full notification object, allowing the AI to consider structured data (priority, damage/cause codes, linked work order) in its assessment.
- The Gemini prompt has been completely rewritten into a more robust GMP audit matrix, evaluating five distinct pillars: GMP/ALCOA+ compliance, traceability, root cause analysis, product impact, and CAPA.
- The scoring rubric is now more detailed, providing a clearer basis for the AIs quality score.

Frontend:
- The Object controller now sends the complete notification object for analysis, enabling the richer backend assessment.
- The status timeline has been enhanced with internationalized text from i18n properties and improved CSS for better visual distinction between completed, current, and future steps.
- Added logic to handle both English and German status IDs from the backend data.

--- a/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
@@ -55,3 +55,11 @@ summaryLabel=Zusammenfassung
 problemsLabel=Festgestellte Probleme
 whatIfAnalysisLabel=Was-wäre-wenn-Analyse
 reanalyzeButtonText=Qualität neu analysieren
+
+# Timeline Statuses
+statusOutstanding=Offen
+statusReleased=Freigegeben
+statusClosed=Abgeschlossen
+statusCreated=Erzeugt
+statusTechnicallyCompleted=Technisch abgeschlossen
+statusBusinessClosed=Betriebswirtschaftlich abgeschlossen
