--- a/pm-analyzer-fiori/webapp/i18n/i18n_en.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n_en.properties
@@ -55,3 +55,11 @@ summaryLabel=Summary
 problemsLabel=Identified Problems
 whatIfAnalysisLabel=What-If Analysis
 reanalyzeButtonText=Re-Analyze Quality
+
+# Timeline Statuses
+statusOutstanding=Outstanding
+statusReleased=Released
+statusClosed=Closed
+statusCreated=Created
+statusTechnicallyCompleted=Technically Completed
+statusBusinessClosed=Business Closed
