feat: Update backend and frontend

--- a/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
@@ -63,3 +63,8 @@ statusClosed=Abgeschlossen
 statusCreated=Erzeugt
 statusTechnicallyCompleted=Technisch abgeschlossen
 statusBusinessClosed=Betriebswirtschaftlich abgeschlossen
+
+# Chat Assistant
+chatTitle=Chat mit dem Assistenten
+chatInputPlaceholder=Stellen Sie eine Frage zu dieser Meldung...
+chatSendButton=Senden
