--- a/pm-analyzer-fiori/webapp/i18n/i18n_en.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n_en.properties
@@ -63,3 +63,8 @@ statusClosed=Closed
 statusCreated=Created
 statusTechnicallyCompleted=Technically Completed
 statusBusinessClosed=Business Closed
+
+# Chat Assistant
+chatTitle=Chat with Assistant
+chatInputPlaceholder=Ask a question about this notification...
+chatSendButton=Send
