feat(ui): Implement Refined Actionable List and Speed Mode

--- a/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n_de.properties
@@ -68,3 +68,8 @@ statusBusinessClosed=Betriebswirtschaftlich abgeschlossen
 chatTitle=Chat mit dem Assistenten
 chatInputPlaceholder=Stellen Sie eine Frage zu dieser Meldung...
 chatSendButton=Senden
+
+
+noProblemsFound=Keine Probleme gefunden.
+
+navigateToFieldTooltip=Zum Feld navigieren
