--- a/pm-analyzer-fiori/webapp/i18n/i18n_en.properties
+++ b/pm-analyzer-fiori/webapp/i18n/i18n_en.properties
@@ -68,3 +68,8 @@ statusBusinessClosed=Business Closed
 chatTitle=Chat with Assistant
 chatInputPlaceholder=Ask a question about this notification...
 chatSendButton=Send
+
+
+noProblemsFound=No problems found.
+
+navigateToFieldTooltip=Navigate to field
