docs: Update project documentation to reflect Suite architecture
Updated README.md, ONBOARDING.md, DECISION_LOG.md, and GEMINI_PROTOCOL.md to align with the new microservices structure, Docker Compose usage, and Vertex AI migration.

--- a/rule-manager/frontend/webapp/i18n/i18n_de.properties
+++ b/rule-manager/frontend/webapp/i18n/i18n_de.properties
@@ -1,86 +1,10 @@
-# App Titles
-appTitle=PM Notification Analyzer
-appDescription=An SAP Fiori application to analyze plant maintenance notifications.
+# RulesetDashboard
+dashboardTitle=Ruleset Dashboard (DE)
+rulesetNameLabel=Ruleset Name (DE)
+assignedToLabel=Assigned To (DE)
+statusLabel=Status (DE)
+versionLabel=Version (DE)
+noDataText=No rulesets found. (DE)
 
-# General Labels
-shortTextLabel=Short Text
-notificationTypeLabel=Notification Type
-createdByLabel=Created By
-functionalLocationLabel=Functional Location
-equipmentLabel=Equipment
-statusLabel=Status
-priorityLabel=Priority
-
-creationDateLabel=Creation Date
-longTextLabel=Long Text
-descriptionLabel=Description
-noDataText=No notifications found.
-
-# Worklist View
-worklistTitle=Notifications
-shortTextPlaceholder=Search in short text...
-notificationTypePlaceholder=Select a type...
-createdByPlaceholder=Select a user...
-functionalLocationPlaceholder=Select a location...
-equipmentPlaceholder=Select an equipment...
-statusPlaceholder=Select a status...
-
-# Object View
-objectTitle=Notification
-notificationDetailsTab=Notification Details
-codesLabel=Codes
-damageLabel=Damage
-causeLabel=Cause
-workOrderTab=Work Order
-orderIdLabel=Order ID
-orderTypeLabel=Order Type
-workCenterLabel=Work Center
-plannerGroupLabel=Planner Group
-basicStartDateLabel=Basic Start Date
-basicEndDateLabel=Basic End Date
-requiredStartLabel=Required Start
-requiredEndLabel=Required End
-malfunctionStartLabel=Malfunction Start
-malfunctionEndLabel=Malfunction End
-operationsHeader=Operations
-operationColumn=Operation
-descriptionColumn=Description
-workCenterColumn=Work Center
-durationColumn=Duration
-
-# Analysis Tab
-qualityAnalysisTab=Quality Analysis
-qualityScoreLabel=Quality Score
-summaryLabel=Summary
-problemsLabel=Identified Problems
-whatIfAnalysisLabel=What-If Analysis
-reanalyzeButtonText=Re-Analyze Quality
-
-# Timeline Statuses
-statusOutstanding=Outstanding
-statusReleased=Released
-statusClosed=Closed
-statusCreated=Created
-statusTechnicallyCompleted=Technically Completed
-statusBusinessClosed=Business Closed
-
-# Chat Assistant
-chatTitle=Chat with Assistant
-chatInputPlaceholder=Ask a question about this notification...
-chatSendButton=Send
-
-
-noProblemsFound=No problems found.
-
-navigateToFieldTooltip=Navigate to field
-
-# Ruleset Dashboard
-dashboardTitle=Ruleset Dashboard
-rulesetNameLabel=Ruleset Name
-assignedToLabel=Assigned To
-versionLabel=Version
-
-# Create Ruleset Dialog
-createRulesetDialogTitle=Create New Ruleset
-rulesetNameLabel=Ruleset Name
-notificationTypeLabel=Notification Type
+# RuleEditor
+ruleEditorTitle=Rule Editor (DE)
